--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">PhotoConverter</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="cancel_converting">Cancel converting</string>
+    <string name="select_image">Select image</string>
+    <string name="converting_in_progress">Converting in progress</string>
 </resources>
